[package]
name = "wikiquery"
version = "0.1.0"
authors = ["dastardlychimp <darien.hess@demochimp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.18"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"