[package]
name = "wikiquery"
version = "0.1.0"
authors = ["dastardlychimp <darien.hess@demochimp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.18"
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"

[dev-dependencies]
hyper = "0.13.0-alpha.2"
lazy_static = "1.4.0" 
tokio = "0.2.0-alpha.5"
hyper-alpn = { git = "https://github.com/pimeys/hyper-alpn", rev="67bf331d9f08cd6621068f9482ff65db83ffcd69" }